--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c \"rollup_config.js\"",
-    "start": "serve"
+    "start": "rollup -c",
+    "serve": "serve"
   },
   "author": "Mugen87",
   "license": "MIT",
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.0",
     "rollup": "^2.39.1",
+    "rollup-plugin-html": "^0.2.1",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2"
   }
