--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.0",
     "rollup": "^2.39.1",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
