--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "rollup -c",
+    "start": "rollup -c -w",
     "serve": "serve"
   },
   "author": "Mugen87",
